# brotensor

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: api.md  architecture.md  op-coverage.md
include/brotensor/: cuda_graph.h  device.h  device_buffer.h  gguf.h  metal_interop.h  ops.h  ops_cpu.h  runtime.h  safetensors.h  tensor.h
include/brotensor/detail/: dispatch.h  op_table.h  string_hash.h
include/brotensor/detail/cpu/: fft_core.h  thread_pool.h
include/brotensor/ops/: activation.h  attention.h  codec.h  concat.h  conv.h  conv1d.h  delta_rule.h  diffusion.h  elementwise.h  embedding.h  flash_attention.h  image.h  linear.h  lora.h  loss.h  lstm.h  norm.h  optim.h  pooling.h  quant.h  reduction.h  resize.h  rope.h  sampling.h  spatial.h  spectral.h  stylegan.h
src/: dispatch.cpp  filtered_lrelu.cpp  gguf.cpp  init.cpp  ops.cpp  safetensors.cpp  tensor.cpp
src/cpu/: activations.cpp  alloc.cpp  attention_moments.cpp  batch_norm.cpp  bias_act.cpp  codec_quant.cpp  concat.cpp  conv1d.cpp  conv2d.cpp  conv3d.cpp  conv_transpose2d.cpp  convex_upsample.cpp  cross_attention.cpp  deform_conv2d.cpp  diffusion_samplers.cpp  elementwise.cpp  embedding.cpp  fft.cpp  flash_attention.cpp  gated_delta_rule.cpp  gather_rows.cpp  geglu.cpp  group_norm.cpp  image_preproc.cpp  interp2d.cpp  kv_cache.cpp  l2_norm.cpp  l2_normalize.cpp  layernorm_inference.cpp  log_exp_round.cpp  loss.cpp  lstm.cpp  matmul.cpp  modulate.cpp  modulated_conv2d.cpp  noise.cpp  ops.cpp  ops_impl.cpp  pad2d.cpp  pool2d.cpp  (+25 more)
src/cuda/: adam.cu  attention.cu  attention_moments.cu  batch_norm.cu  batched_ops.cu  bias_act.cu  codec_quant.cu  concat.cu  conv1d.cu  conv2d.cu  conv2d_int8w_wmma.cu  conv2d_wmma.cu  conv3d.cu  conv_transpose2d.cu  convex_upsample.cu  cross_attention.cu  cross_attention_with_attn.cu  cuda_graph.cu  ddim_step.cu  deform_conv2d.cu  dpmpp_2m_step.cu  elementwise.cu  embedding.cu  euler_step.cu  fft.cu  filtered_lrelu.cu  flash_attention.cu  flash_attention_backward.cu  flash_attention_fused.cu  flash_fused_internal.cuh  fp16_internal.cuh  fp16_matmul.cu  gated_delta_rule.cu  gather_scatter.cu  gemm.cu  group_norm.cu  image_preproc.cu  int8_quant.cu  interp2d.cu  kv_cache.cu  (+53 more)
src/cuda/detail/: activations.cuh  cuda_check.h
src/metal/: adam.mm  attention.mm  attention_moments.mm  batch_norm.mm  batched_ops.mm  bias_act.mm  codec_quant.mm  concat.mm  conv1d.mm  conv2d.mm  conv2d_wmma.h  conv2d_wmma.mm  conv3d.mm  conv_transpose2d.mm  convex_upsample.mm  cross_attention.mm  cross_attention_with_attn.mm  ddim_step.mm  deform_conv2d.mm  device_buffer.mm  dpmpp_2m_step.mm  elementwise.mm  embedding.mm  euler_step.mm  fft.mm  flash_attention.mm  flash_attention_backward.mm  flash_attention_windowed.mm  fp16_matmul.h  fp16_matmul.mm  gated_delta_rule.mm  gather_rows.mm  gemm.mm  group_norm.mm  image_preproc.mm  int8_quant.mm  internal.h  interp2d.mm  kernels.mm  kv_cache.mm  (+44 more)
tests/: CMakeLists.txt  bench_conv_annotators.cpp  bench_decode_kernels.cpp  bench_diffusion.cpp  bench_filtered_lrelu.cpp  bench_flow_attention.cpp  bench_modulated_conv2d.cpp  bench_sam_attention.cpp  parity_helpers.h  test_activations.cpp  test_activations_parity.cpp  test_adam_parity.cpp  test_attention_moments.cpp  test_attention_moments_parity.cpp  test_attention_parity.cpp  test_batch_norm.cpp  test_batch_norm_parity.cpp  test_batched_backward_parity.cpp  test_batched_parity.cpp  test_bce_with_logits.cpp  test_bf16_basics.cpp  test_bias_act.cpp  test_codec_quant.cpp  test_codec_quant_parity.cpp  test_concat_extra_parity.cpp  test_concat_parity.cpp  test_conv1d.cpp  test_conv1d_parity.cpp  test_conv2d.cpp  test_conv2d_parity.cpp  test_conv3d.cpp  test_conv3d_parity.cpp  test_conv_transpose2d.cpp  test_conv_transpose2d_parity.cpp  test_convex_upsample_parity.cpp  test_cpu_gpu_parity.cpp  test_cpu_ops.cpp  test_cross_attention.cpp  test_cross_attention_parity.cpp  test_cross_attention_with_attn.cpp  (+122 more)
