# Minimal smoke tests for brotensor. Deep CPU↔GPU parity coverage lives in
# brogameagent's tests since those need a CPU reference implementation.

function(brotensor_add_executable name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE brotensor)
    if(BROTENSOR_WITH_CUDA)
        target_include_directories(${name} PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
    endif()
    if(MSVC)
        target_compile_options(${name} PRIVATE /W4)
    else()
        target_compile_options(${name} PRIVATE -Wall -Wextra)
    endif()
endfunction()

function(brotensor_add_test name)
    brotensor_add_executable(${name} ${ARGN})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

brotensor_add_test(brotensor_test test_tensor.cpp)
brotensor_add_test(brotensor_test_conv2d test_conv2d.cpp)
brotensor_add_test(brotensor_test_group_norm test_group_norm.cpp)
brotensor_add_test(brotensor_test_activations test_activations.cpp)
brotensor_add_test(brotensor_test_resample test_resample.cpp)
brotensor_add_test(brotensor_test_cross_attention test_cross_attention.cpp)
brotensor_add_test(brotensor_test_fp16_basics test_fp16_basics.cpp)
brotensor_add_test(brotensor_test_flash_attention test_flash_attention.cpp)
brotensor_add_test(brotensor_test_resblock test_resblock.cpp)
brotensor_add_test(brotensor_test_diffusion_primitives test_diffusion_primitives.cpp)
brotensor_add_test(brotensor_test_transpose test_transpose.cpp)
brotensor_add_test(brotensor_test_large_elementwise test_large_elementwise.cpp)
brotensor_add_test(brotensor_test_matmul test_matmul.cpp)
brotensor_add_test(brotensor_test_matmul_backward test_matmul_backward.cpp)
brotensor_add_test(brotensor_test_flash_attention_backward test_flash_attention_backward.cpp)
brotensor_add_test(brotensor_test_rope test_rope.cpp)
brotensor_add_test(brotensor_test_rms_norm test_rms_norm.cpp)
brotensor_add_test(brotensor_test_swiglu test_swiglu.cpp)
brotensor_add_test(brotensor_test_kv_cache test_kv_cache.cpp)
brotensor_add_test(brotensor_test_public_reductions test_public_reductions.cpp)
brotensor_add_test(brotensor_test_ddim_step test_ddim_step.cpp)
brotensor_add_test(brotensor_test_sdxl_schedulers test_sdxl_schedulers.cpp)
brotensor_add_test(brotensor_test_int8_quant test_int8_quant.cpp)
brotensor_add_test(brotensor_test_int8_conv_wmma test_int8_conv_wmma.cpp)
brotensor_add_test(brotensor_test_int8_attention test_int8_attention.cpp)
if(BROTENSOR_WITH_CUDA)
    brotensor_add_test(brotensor_test_streams test_streams.cpp)
endif()

# Diffusion micro-benchmark. Built but not added to ctest — invoke
# manually from the build dir (./tests/Release/brotensor_bench_diffusion).
# CUDA-only: it uses cudaEvent_t for timing.
if(BROTENSOR_WITH_CUDA)
    brotensor_add_executable(brotensor_bench_diffusion bench_diffusion.cpp)
endif()
